Kubernetes-Pods-ReplicaSets-&-Deployments/03-canary/ingress/services.yaml
# Method 2 uses one Service for each track. The Ingress files use these Services.
apiVersion: v1
kind: Service
metadata:
  name: myapp-stable
  namespace: s10-canary
spec:
  type: ClusterIP
  selector:
    app: myapp-canary
    track: stable
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-canary
  namespace: s10-canary
spec:
  type: ClusterIP
  selector:
    app: myapp-canary
    track: canary
  ports:
    - name: http
      port: 80
      targetPort: 80
